--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ nav{
     
 }
 nav > a{
-    color: crimson;
+    color: black;
     text-decoration: none;
     transition-duration: 0.5s;
     font-weight: bold;
