--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ nav > a:hover{
     background-color: rgb(194, 0, 0);
 }
  main{
+    font-size: 1.5em;
     background-color: white;
     height: auto;
     max-width:400px;
