--- a/style.css
+++ b/style.css
@@ -42,6 +42,13 @@ nav > a:hover{
     border: 1px solid black;
     border-radius: 15px;
  }
+ h1{
+    color: gray
+ }
  p{
     font-size: 1.2em;
+ }
+ h2{
+    font-size: 1.2em;
+    color: gray
  }
